K8S/platforms-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: platforms-depl
spec:
  replicas: 1
  selector: #select pod
    matchLabels:
      app: platformservice
  template: #pod
    metadata:
      labels:
        app: platformservice
    spec:
      containers:
        - name: platformservice
          image: mohisa/platformservice:latest
