K8S/platforms-np-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: platformnpservice-srv
spec:
  type: NodePort
  selector:
    app: platformservice
  ports:
    - name: http
      protocol: TCP
      port: 80 # The internal ClusterIP port (not mandatory for NodePort)
      targetPort: 80 # app listens on 80
      nodePort: 32686 # Exposed to outside world
